[project]
name = "treetally"
requires-python = ">=3.9"
description = "A forestry LiDAR processing package"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Kyle Mann", email = "kyle@hobu.co" },
  { name = "Howard Butler", email = "howard@hobu.co" },
  { name = "Bahirah Adewunmi" }
]
maintainers = [
    { name = "Ognyan Moore", email = "ogi@hobu.co" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
  "PDAL",
  "tiledb", "pyproj", "dask", "shapely", "numpy", "GDAL"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/hobuinc/treetally"
repository = "https://github.com/hobuinc/treetally"

[tool.setuptools]
package-dir = {"" =  "src"}
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "treetally.__version__" }

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
treetally = "treetally.main:main"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.py(i|t)?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv*
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = 3.9
warn_return_any = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true

