[project]
name = "silvimetric"
requires-python = ">=3.9"
description = "A forestry LiDAR processing package"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Kyle Mann", email = "kyle@hobu.co" },
  { name = "Howard Butler", email = "howard@hobu.co" }
]
maintainers = [
    { name = "Kyle Mann", email = "kyle@hobu.co" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/hobuinc/silvimetric"
repository = "https://github.com/hobuinc/silvimetric"

[tool.ruff]
line-length = 80
exclude = [
  ".git",
  ".github",
  ".mypy_cache",
  ".vscode",
  "build",
  "docs"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select=[
  "A",
  "B",
  "E",
  "F",
  "ISC",
  "RUF"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 80

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.setuptools]
package-dir = {"" =  "src"}

[tool.setuptools.dynamic]
version = { attr = "silvimetric.__version__" }

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
silvimetric = "silvimetric.cli.cli:cli"


[tool.pytest.ini_options]
testpaths = [
  "tests"
]
